--- a/package.json
+++ b/package.json
@@ -7,5 +7,6 @@
     "test": ""
   },
   "author": "theCrew",
-  "license": "ISC"
+  "license": "MIT",
+  "homepage": "https://github.com/thecrewspace/thecrewcss.git"
 }
